// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blockquote Default renders correctly 1`] = `
<jest>
  <blockquote
    class="ecl-blockquote"
  >
    <div
      class="ecl-blockquote__inner"
    >
      <p
        class="ecl-blockquote__body"
      >
        An interconnected grid will help deliver the ultimate goal of the Energy Union, to make sure affordable, secure and sustainable energy, and also growth across the EU.
      </p>
      <footer
        class="ecl-blockquote__attribution"
      >
        <cite
          class="ecl-blockquote__author"
        >
          President Juncker
        </cite>
      </footer>
    </div>
    <img
      class="ecl-blockquote__image"
      height="120"
      src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image3.jpg"
      width="120"
    />
  </blockquote>
</jest>
`;

exports[`Blockquote Default renders correctly with extra attributes 1`] = `
<jest>
  <blockquote
    class="ecl-blockquote"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-blockquote__inner"
    >
      <p
        class="ecl-blockquote__body"
      >
        An interconnected grid will help deliver the ultimate goal of the Energy Union, to make sure affordable, secure and sustainable energy, and also growth across the EU.
      </p>
      <footer
        class="ecl-blockquote__attribution"
      >
        <cite
          class="ecl-blockquote__author"
        >
          President Juncker
        </cite>
      </footer>
    </div>
    <img
      class="ecl-blockquote__image"
      height="120"
      src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image3.jpg"
      width="120"
    />
  </blockquote>
</jest>
`;

exports[`Blockquote Default renders correctly with extra class names 1`] = `
<jest>
  <blockquote
    class="ecl-blockquote custom-class custom-class--test"
  >
    <div
      class="ecl-blockquote__inner"
    >
      <p
        class="ecl-blockquote__body"
      >
        An interconnected grid will help deliver the ultimate goal of the Energy Union, to make sure affordable, secure and sustainable energy, and also growth across the EU.
      </p>
      <footer
        class="ecl-blockquote__attribution"
      >
        <cite
          class="ecl-blockquote__author"
        >
          President Juncker
        </cite>
      </footer>
    </div>
    <img
      class="ecl-blockquote__image"
      height="120"
      src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image3.jpg"
      width="120"
    />
  </blockquote>
</jest>
`;
